# insight-engine

./: .gitignore  README.md  pyproject.toml
chroma_db/: chroma.sqlite3
src/: main.py
src/engine/: __init__.py  graph.py  model_factory.py  state.py  tools.py
